--- a/BallClub/BallClub/Storyboards/Game.storyboard
+++ b/BallClub/BallClub/Storyboards/Game.storyboard
@@ -36,7 +36,7 @@
         <!--Create Game-->
         <scene sceneID="diT-kt-apl">
             <objects>
-                <tableViewController id="pcB-fS-nR3" sceneMemberID="viewController">
+                <tableViewController id="pcB-fS-nR3" customClass="CreateGameViewController" customModule="BallClub" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="2" sectionFooterHeight="2" id="0oM-Ud-QQg">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="900"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -211,7 +211,7 @@
                                                     </state>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jPc-Ag-ax8">
-                                                    <rect key="frame" x="495" y="19" width="36" height="36"/>
+                                                    <rect key="frame" x="531" y="19" width="36" height="36"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="36" id="2Dk-sQ-Ulq"/>
                                                         <constraint firstAttribute="height" constant="36" id="DAO-TD-rAN"/>
@@ -219,7 +219,7 @@
                                                     <state key="normal" backgroundImage="ic_closed"/>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7YC-cv-oFV">
-                                                    <rect key="frame" x="485" y="52" width="56" height="30"/>
+                                                    <rect key="frame" x="521" y="52" width="56" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="30" id="5hT-38-uUe"/>
                                                         <constraint firstAttribute="width" constant="56" id="YqN-f0-Agp"/>
@@ -240,7 +240,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3iL-Bw-7w1">
-                                                    <rect key="frame" x="78" y="21" width="34" height="34"/>
+                                                    <rect key="frame" x="44" y="21" width="34" height="34"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="34" id="M5p-kt-fWF"/>
                                                         <constraint firstAttribute="width" constant="34" id="xyG-bP-gaP"/>
@@ -248,7 +248,7 @@
                                                     <state key="normal" backgroundImage="ic_public"/>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GlD-4w-9Vi">
-                                                    <rect key="frame" x="73" y="52" width="46" height="30"/>
+                                                    <rect key="frame" x="39" y="52" width="46" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="30" id="eKx-RJ-rza"/>
                                                         <constraint firstAttribute="width" constant="46" id="fWP-ho-0T1"/>
@@ -263,13 +263,13 @@
                                                 <constraint firstItem="ePv-Iw-StX" firstAttribute="top" secondItem="3iL-Bw-7w1" secondAttribute="bottom" constant="28" id="9VH-28-5YS"/>
                                                 <constraint firstItem="ePv-Iw-StX" firstAttribute="top" secondItem="jPc-Ag-ax8" secondAttribute="bottom" constant="28" id="Dst-SI-pIx"/>
                                                 <constraint firstItem="GlD-4w-9Vi" firstAttribute="top" secondItem="0PK-Ue-qTR" secondAttribute="topMargin" constant="44" id="ECC-Ka-RyB"/>
-                                                <constraint firstItem="GlD-4w-9Vi" firstAttribute="leading" secondItem="0PK-Ue-qTR" secondAttribute="leadingMargin" constant="65" id="FPR-MC-xL6"/>
+                                                <constraint firstItem="GlD-4w-9Vi" firstAttribute="leading" secondItem="0PK-Ue-qTR" secondAttribute="leadingMargin" constant="31" id="FPR-MC-xL6"/>
                                                 <constraint firstItem="GlD-4w-9Vi" firstAttribute="baseline" secondItem="bXX-iJ-WUc" secondAttribute="baseline" id="Fkl-6q-bZf"/>
                                                 <constraint firstItem="jPc-Ag-ax8" firstAttribute="top" secondItem="abZ-Cc-aRE" secondAttribute="top" id="H9E-IP-fWk"/>
                                                 <constraint firstItem="GlD-4w-9Vi" firstAttribute="baseline" secondItem="7YC-cv-oFV" secondAttribute="baseline" id="JEw-nd-8IB"/>
                                                 <constraint firstItem="jPc-Ag-ax8" firstAttribute="baseline" secondItem="abZ-Cc-aRE" secondAttribute="baseline" id="Kud-GK-0OV"/>
                                                 <constraint firstItem="ePv-Iw-StX" firstAttribute="top" secondItem="GlD-4w-9Vi" secondAttribute="bottom" constant="1" id="Qme-VY-Hg7"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="jPc-Ag-ax8" secondAttribute="trailing" constant="61" id="RuE-nf-21E"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="jPc-Ag-ax8" secondAttribute="trailing" constant="25" id="RuE-nf-21E"/>
                                                 <constraint firstItem="jPc-Ag-ax8" firstAttribute="firstBaseline" secondItem="abZ-Cc-aRE" secondAttribute="firstBaseline" id="XIL-k5-3MI"/>
                                                 <constraint firstItem="bXX-iJ-WUc" firstAttribute="centerX" secondItem="abZ-Cc-aRE" secondAttribute="centerX" id="Yad-sk-lji"/>
                                                 <constraint firstItem="jPc-Ag-ax8" firstAttribute="centerX" secondItem="7YC-cv-oFV" secondAttribute="centerX" id="n29-Fo-yM1"/>
@@ -407,6 +407,7 @@
                                                 <constraint firstItem="Zns-M9-ynM" firstAttribute="leading" secondItem="VPr-YE-0oS" secondAttribute="leading" id="bdk-Ee-3bs"/>
                                                 <constraint firstItem="HEX-oZ-K5Q" firstAttribute="top" secondItem="JGl-MJ-lBa" secondAttribute="bottom" constant="13" id="h3N-15-zaN"/>
                                                 <constraint firstItem="VPr-YE-0oS" firstAttribute="top" secondItem="Zns-M9-ynM" secondAttribute="bottom" constant="10" id="hL6-I7-EqX"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="VPr-YE-0oS" secondAttribute="trailing" constant="6" id="pOO-0C-b7K"/>
                                                 <constraint firstItem="JGl-MJ-lBa" firstAttribute="centerX" secondItem="HEX-oZ-K5Q" secondAttribute="centerX" id="yYJ-XA-F31"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -500,6 +501,9 @@
                     </navigationItem>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="600" height="900"/>
+                    <connections>
+                        <outlet property="createGameTableView" destination="0oM-Ud-QQg" id="Zmb-yA-Hgy"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k02-gx-yya" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
