--- a/BallClub/BallClub/Storyboards/Main.storyboard
+++ b/BallClub/BallClub/Storyboards/Main.storyboard
@@ -1,113 +1,64 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="8IE-hm-14d">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Ghl-Os-aEh">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--Tab Bar Controller-->
-        <scene sceneID="TWq-uc-FDZ">
+        <!--Main View Controller-->
+        <scene sceneID="g0D-hV-mQ3">
             <objects>
-                <tabBarController id="8IE-hm-14d" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="1an-1j-MUf"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="wMs-bw-Wmy">
+                <tabBarController id="Ghl-Os-aEh" customClass="MainViewController" customModule="BallClub" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="2Vx-cT-1Ed">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" red="0.14117647058823529" green="0.14509803921568629" blue="0.12549019607843137" alpha="1" colorSpace="calibratedRGB"/>
-                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <color key="barTintColor" red="0.14117647059999999" green="0.1450980392" blue="0.12549019610000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.14117647059999999" green="0.1450980392" blue="0.12549019610000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="selectedImageTintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="07d-Js-1GL" kind="relationship" relationship="viewControllers" id="jto-a2-8xg"/>
-                        <segue destination="bSO-Ie-2Zd" kind="relationship" relationship="viewControllers" id="MX0-Cc-6EY"/>
-                        <segue destination="tgd-vm-afL" kind="relationship" relationship="viewControllers" id="Gvr-ow-hHK"/>
+                        <segue destination="tDE-Fg-NJR" kind="relationship" relationship="viewControllers" id="E4H-L8-09L"/>
+                        <segue destination="SQc-eD-Yi8" kind="relationship" relationship="viewControllers" id="5uM-uB-MDA"/>
+                        <segue destination="DqP-cB-gr4" kind="relationship" relationship="viewControllers" id="AL4-Bx-yHP"/>
                     </connections>
                 </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="0CU-S9-dro" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8Sb-bZ-jg7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-570" y="835"/>
-        </scene>
-        <!--Games-->
-        <scene sceneID="WcE-Pp-Hh9">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="07d-Js-1GL" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Games" image="ic_tabbar_game" id="pep-pC-hc7"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="IDh-dr-G2Y">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="5nT-d3-m8I" kind="show" id="LR3-Cn-zuJ"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Jfb-fV-oWI" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1233" y="1924"/>
+            <point key="canvasLocation" x="-76" y="-222"/>
         </scene>
         <!--Games Storyboard-->
-        <scene sceneID="ajt-NO-jtx">
+        <scene sceneID="iii-L0-65u">
             <objects>
-                <viewControllerPlaceholder storyboardName="Game" id="5nT-d3-m8I" userLabel="Games Storyboard" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="i5o-ud-MnM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewControllerPlaceholder storyboardName="Game" id="tDE-Fg-NJR" userLabel="Games Storyboard" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Games" image="ic_tabbar_game" id="dZh-ab-i75"/>
+                    <navigationItem key="navigationItem" id="7BO-Wo-cpH"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="359-h5-90f" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1232.5" y="2314"/>
+            <point key="canvasLocation" x="-317.5" y="264"/>
         </scene>
-        <!--User-->
-        <scene sceneID="hYZ-S4-CSP">
+        <!--Map Storyboard-->
+        <scene sceneID="Dpu-Oy-RBp">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="tgd-vm-afL" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="User" image="ic_tabbar_user" id="PHm-bP-Jqb"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="cw5-Cp-lcq">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="N2E-qy-43i" kind="show" id="nLU-od-y14"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="3jz-xa-XJo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewControllerPlaceholder storyboardName="Maps" id="SQc-eD-Yi8" userLabel="Map Storyboard" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Map" image="ic_tabbar_map" id="F27-LJ-grg"/>
+                    <navigationItem key="navigationItem" id="4MW-Ga-aX3"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GvP-gp-4lP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="77" y="1924"/>
+            <point key="canvasLocation" x="-77" y="264"/>
         </scene>
         <!--User Storyboard-->
-        <scene sceneID="8ib-bv-Jgu">
+        <scene sceneID="d0C-RZ-x1d">
             <objects>
-                <viewControllerPlaceholder storyboardName="User" id="N2E-qy-43i" userLabel="User Storyboard" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Qwh-j8-ze3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewControllerPlaceholder storyboardName="User" id="DqP-cB-gr4" userLabel="User Storyboard" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="User" image="ic_tabbar_user" id="2ff-UC-Tzp"/>
+                    <navigationItem key="navigationItem" id="gbT-a8-y64"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NKs-O4-y9i" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="77.5" y="2314"/>
-        </scene>
-        <!--Map-->
-        <scene sceneID="paT-Dt-MC7">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="bSO-Ie-2Zd" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Map" image="ic_tabbar_map" id="llm-uK-BaQ"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="fnz-xb-tct">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="86F-Rb-8A6" kind="show" id="wTN-oF-Ty9"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Gox-y2-ha3" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-570" y="1924"/>
-        </scene>
-        <!--Maps Storyboard-->
-        <scene sceneID="WVA-ny-P2S">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Maps" id="86F-Rb-8A6" userLabel="Maps Storyboard" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="weu-ZK-fm1" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-569.5" y="2314"/>
+            <point key="canvasLocation" x="158" y="264"/>
         </scene>
     </scenes>
     <resources>
