--- a/BallClub/BallClub/Storyboards/User.storyboard
+++ b/BallClub/BallClub/Storyboards/User.storyboard
@@ -6,10 +6,10 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--User View Controller-->
         <scene sceneID="bzF-x7-QnM">
             <objects>
-                <viewController id="1Qb-0J-YXH" sceneMemberID="viewController">
+                <viewController id="1Qb-0J-YXH" customClass="UserViewController" customModule="BallClub" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="JRL-Vr-f9G"/>
                         <viewControllerLayoutGuide type="bottom" id="FbZ-1r-77V"/>
@@ -99,6 +99,9 @@
                                         <state key="normal" title="View/Edit your profile">
                                             <color key="titleColor" red="0.14117647059999999" green="0.1450980392" blue="0.12549019610000001" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
+                                        <connections>
+                                            <action selector="editProfilePressed:" destination="1Qb-0J-YXH" eventType="touchUpInside" id="V8X-j0-gZm"/>
+                                        </connections>
                                     </button>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_settings" translatesAutoresizingMaskIntoConstraints="NO" id="mQw-j7-2SX">
                                         <rect key="frame" x="24" y="106" width="40" height="40"/>
@@ -117,6 +120,9 @@
                                         <state key="normal" title="Settings">
                                             <color key="titleColor" red="0.14117647059999999" green="0.1450980392" blue="0.12549019610000001" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
+                                        <connections>
+                                            <action selector="settingsButtonPressed:" destination="1Qb-0J-YXH" eventType="touchUpInside" id="YPk-uu-kU5"/>
+                                        </connections>
                                     </button>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calvin" translatesAutoresizingMaskIntoConstraints="NO" id="Dxd-n6-1uu">
                                         <rect key="frame" x="24" y="56" width="40" height="40"/>
@@ -176,6 +182,9 @@
                                     <segment title="Add Friend"/>
                                 </segments>
                                 <color key="tintColor" red="0.90196078430000004" green="0.38823529410000002" blue="0.050980392159999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="segmentTabChanged:" destination="1Qb-0J-YXH" eventType="valueChanged" id="j1b-Ks-2PD"/>
+                                </connections>
                             </segmentedControl>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="boT-a7-I9B">
                                 <rect key="frame" x="0.0" y="328" width="600" height="223"/>
@@ -230,6 +239,9 @@
                     </view>
                     <navigationItem key="navigationItem" id="AeX-RC-C04"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics" translucent="NO"/>
+                    <connections>
+                        <outlet property="friendsTableView" destination="boT-a7-I9B" id="NTa-4B-qDk"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7uS-SA-01D" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
